added Ajax to appointments for Reat on rails

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -5,13 +5,11 @@
 
 <h1> Make a new appointment </h1>
 
- <%= simple_form_for( @appointment) do |f| %>
+ <%= simple_form_for( @appointment, remote: true) do |f| %>
 <%= f.input :title %>
 <%= f.input :appt_time %>
 <%= f.button :submit %>
 <% end %>
 
-<% @appointments.each do |appointment| %>
-  <%= appointment.title %>
-  <%= appointment.appt_time %>
-<% end %>
+<br>
+<%= render 'appointments' %>
