--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,8 +1,5 @@
 <h1> React Calendar </h1>
-
 <h1> Appointments </h1>
-
-
 <h1> Make a new appointment </h1>
 
  <%= simple_form_for( @appointment, remote: true) do |f| %>
@@ -12,4 +9,5 @@
 <% end %>
 
 <br>
+<h2>Appointments</h2>
 <%= render 'appointments' %>
