--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -1,5 +1,8 @@
 <% @appointments.each do |appointment| %>
   <%= appointment.title %>
-  <%= appointment.appt_time %>
-  <br>
+  <%= appointment.appt_time %> 
+
+<%# This Deletes and uses Ajax. No reloads %>
+<%= link_to 'Destroy', appointment, method: :delete, remote: true %>
+<br>
 <% end %>
