--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -2,12 +2,4 @@
 <h1> Appointments </h1>
 <h1> Make a new appointment </h1>
 
- <%= simple_form_for(@appointment, remote: true) do |f| %>
-<%= f.input :title %>
-<%= f.input :appt_time %>
-<%= f.button :submit %>
-<% end %>
-
-<br>
-<h2>Appointments</h2>
-<%= render 'appointments' %>
+<%= react_component('Appointments', appointments: @appointments) %>
